--- a/_posts/2022-10-20-first.md
+++ b/_posts/2022-10-20-first.md
@@ -3,13 +3,14 @@ layout: single
 title: "첫번째 포스트입니다!!!"
 categories: coding
 tags: [python, C, C++]
+toc: true
 ---
 
 ## 샘플 포스트
 
 안녕하세요.
 
-
+# 좋네요!!!
 
 천재 Sam입니다.
 
