--- a/_posts/2022-10-20-first.md
+++ b/_posts/2022-10-20-first.md
@@ -4,6 +4,9 @@ title: "첫번째 포스트입니다!!!"
 categories: coding
 tags: [python, C, C++]
 toc: true
+author_profile: false
+sidebar:
+    nav: "docs"
 ---
 
 ## 샘플 포스트
