--- a/_posts/2022-10-20-first.md
+++ b/_posts/2022-10-20-first.md
@@ -5,8 +5,8 @@ categories: coding
 tags: [python, C, C++]
 toc: true
 author_profile: false
-sidebar:
-    nav: "docs"
+#sidebar:
+#    nav: "docs"
 ---
 
 ## 샘플 포스트
